<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="net.pot8os.kotlintestsample.CalculatorViewModel" />
  </data>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:orientation="vertical">

      <EditText
        android:id="@+id/field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:enabled="false"
        android:gravity="end"
        android:maxLength="16"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:text="0" />

      <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:columnCount="4"
        android:rowCount="4">

        <Button
          android:id="@+id/button_7"
          style="@style/DigitButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="0"
          android:layout_column="0"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedDigit(7)}"
          android:text="@string/digit_7" />

        <Button
          android:id="@+id/button_8"
          style="@style/DigitButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="0"
          android:layout_column="1"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedDigit(8)}"
          android:text="@string/digit_8" />

        <Button
          android:id="@+id/button_9"
          style="@style/DigitButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="0"
          android:layout_column="2"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedDigit(9)}"
          android:text="@string/digit_9" />

        <Button
          android:id="@+id/button_div"
          style="@style/SignButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="0"
          android:layout_column="3"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedSign('/')}"
          android:text="@string/sign_div" />

        <Button
          android:id="@+id/button_4"
          style="@style/DigitButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="1"
          android:layout_column="0"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedDigit(4)}"
          android:text="@string/digit_4" />

        <Button
          android:id="@+id/button_5"
          style="@style/DigitButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="1"
          android:layout_column="1"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedDigit(5)}"
          android:text="@string/digit_5" />

        <Button
          android:id="@+id/button_6"
          style="@style/DigitButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="1"
          android:layout_column="2"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedDigit(6)}"
          android:text="@string/digit_6" />

        <Button
          android:id="@+id/button_mul"
          style="@style/SignButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="1"
          android:layout_column="3"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedSign('*')}"
          android:text="@string/sign_mul" />

        <Button
          android:id="@+id/button_1"
          style="@style/DigitButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="2"
          android:layout_column="0"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedDigit(1)}"
          android:text="@string/digit_1" />

        <Button
          android:id="@+id/button_2"
          style="@style/DigitButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="2"
          android:layout_column="1"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedDigit(2)}"
          android:text="@string/digit_2" />

        <Button
          android:id="@+id/button_3"
          style="@style/DigitButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="2"
          android:layout_column="2"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedDigit(3)}"
          android:text="@string/digit_3" />

        <Button
          android:id="@+id/button_sub"
          style="@style/SignButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="2"
          android:layout_column="3"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedSign('-')}"
          android:text="@string/sign_sub" />

        <Button
          android:id="@+id/button_all_clear"
          style="@style/AllClearButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="3"
          android:layout_column="0"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedAllClear()}"
          android:text="@string/ac" />

        <Button
          android:id="@+id/button_0"
          style="@style/DigitButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="3"
          android:layout_column="1"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedDigit(0)}"
          android:text="@string/digit_0" />

        <Button
          android:id="@+id/button_calc"
          style="@style/EqualButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="3"
          android:layout_column="2"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedEqual()}"
          android:text="@string/equal" />

        <Button
          android:id="@+id/button_sum"
          style="@style/SignButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_row="3"
          android:layout_column="3"
          android:layout_columnWeight="1"
          android:onClick="@{() -> viewModel.onClickedSign('+')}"
          android:text="@string/sign_sum" />
      </GridLayout>
    </LinearLayout>
  </RelativeLayout>
</layout>
